--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ python = "^3.8"
 jq = "^1.2.2"
 colorama = "^0.4.4"
 typing-extensions = "^4.7.1"
+netifaces-plus = "^0.12.0"
 
 [tool.poetry.dev-dependencies]
 mypy = "^0.931"
@@ -25,6 +26,9 @@ python-semantic-release = "^7.25.2"
 #doc2md = "^0.1.0"
 #Sphinx = "^4.4.0"
 #sphinx-markdown-builder = "^0.5.5"
+
+[tool.poetry.group.dev.dependencies]
+types-requests = "^2.31.0.2"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
