--- a/.github/workflows/test_publish.yml
+++ b/.github/workflows/test_publish.yml
@@ -1,8 +1,21 @@
-- name: Build and publish to test-pypi
-  uses: JRubics/poetry-publish@v1.17
-  with:
-    python_version: "3.10"
-    # poetry_version: "==1.1.13" # (PIP version specifier syntax)
-    pypi_token: ${{ secrets.TEST_PYPI_TOKEN }}
-    repository_name: "testpypi"
-    repository_url: "https://test.pypi.org/legacy/"
+name: Test Publish
+
+on:
+  release:
+    types:
+      - created
+
+jobs:
+  build:
+    runs-on: ubuntu-latest
+    environment: staging
+    steps:
+      - uses: actions/checkout@v3
+      - name: Build and publish to test-pypi
+        uses: JRubics/poetry-publish@v1.17
+        with:
+          python_version: "3.10"
+          # poetry_version: "==1.1.13" # (PIP version specifier syntax)
+          pypi_token: ${{ secrets.TEST_PYPI_TOKEN }}
+          repository_name: "testpypi"
+          repository_url: "https://test.pypi.org/legacy/"
