--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,9 @@ python-semantic-release = "^7.25.2"
 #sphinx-markdown-builder = "^0.5.5"
 types-requests = "^2.31.0.2"
 
+[tool.poetry.group.dev.dependencies]
+mypy = "^1.4.1"
+
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
